offapi/UnoApi_offapi.mk
@@ -70,7 +70,6 @@ $(eval $(call gb_UnoApi_add_idlfiles_nohdl,offapi,offapi/com/sun/star/awt/tab,\
 	UnoControlTabPageModel \
 ))
 $(eval $(call gb_UnoApi_add_idlfiles_nohdl,offapi,offapi/com/sun/star/awt/tree,\
-	DefaultTreeDataModel \
 	MutableTreeDataModel \
 	MutableTreeNode \
 	TreeControl \
